Replace inline texts on intro page with intl texts

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -250,8 +250,31 @@
     "steg.footer.avbryt": "Avbryt og slett søknad",
     "steg.footer.fortsettSenere": "Avslutt og fortsett senere",
 
-    "step.vedlegg.stepTitle": "Ta bildet av bekreftelsen fra legen, og last opp.",
     "steg.dokumenter.vedlegg": "Last opp bilde av dokumentene (maks 3 bilder)",
+
+    "steg.intro.info.1.html": "Denne søknaden bruker du når du er <strong>selvstendig næringsdrivende eller frilanser</strong> og skal søke om utbetaling av omsorgspenger. Hvis du er ansatt i eget AS regnes du som arbeidstaker, da skal du eller din regnskapsfører ",
+    "steg.intro.info.2": "sende inntektsmelding til NAV",
+    "steg.intro.info.3": "Du kan søke om omsorgspenger når du har vært hjemme fra jobb fordi",
+    "steg.intro.info.4": "barnet eller barnepasser er syk",
+    "steg.intro.info.5": "barnehagen eller skolen er stengt på grunn av koronaviruset",
+    "steg.intro.info.6": "barnet ikke kan gå i barnehage eller skole når disse åpnes igjen, på grunn av særlige smittevernhensyn",
+    "steg.intro.info.7.1": "Vær oppmerksom på at om du har søkt om ",
+    "steg.intro.info.7.2": "kompensasjon for tapt inntekt som selvstendig næringsdrivende og/eller frilanser",
+    "steg.intro.info.7.3": ", kan du ikke søke om omsorgspenger for samme periode.",
+    "steg.intro.info.8.1": "Hvis du har søkt om kompensasjon, men nå ønsker å søke om omsorgspenger, må du trekke din søknad om kompensasjon. Dette gjør du ved å ",
+    "steg.intro.info.8.2": "skrive en beskjed til oss",
+    "steg.intro.info.8.3": ". Under tema velger du jobbsøker (selv om du ikke er jobbsøker).",
+
+    "steg.intro.form.spm.erSelvstendigEllerFrilanser": "Er du selvstendig næringsdrivende eller frilanser?",
+    "steg.intro.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
+    "steg.intro.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi skolen/barnehagen er stengt på grunn av koronaviruset?",
+    "steg.intro.form.spm.hjemmePgaSykdom": "Har du vært hjemme fra jobb fordi barnet eller barnepasser er blitt syk?",
+    "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjelder <strong>kun for selvstendig næringsdrivende og frilansere</strong> som skal søke om utbetaling av omsorgspenger.",
+    "steg.intro.søknadGjelderKunFor.2.html": "Hvis du er <strong>arbeidstaker</strong>, skal du ikke søke om utbetaling av omsorgspenger. Arbeidsgiveren din skal utbetale deg lønn som vanlig de dagene du tar ut omsorgsdager.",
+    "steg.intro.kanIkkeBrukeSøknad.html": "Du kan <strong>kun</strong> bruke denne søknaden hvis du er hjemme fra jobb på grunn av én av situasjonene beskrevet over.",
+    "steg.intro.smittevernInfo.1.html": "I søknaden må du laste opp en bekreftelse fra lege. Legen må bekrefte at barnet ikke kan gå i barnehage eller skole fordi det er <strong>særlige smittevernhensyn</strong> i forbindelse med koronaviruset som må ivaretas for enten barnet eller et familiemedlem som barnet bor sammen med. Legen skal ikke oppgi diagnose eller hvilket familiemedlem det gjelder.",
+    "steg.intro.smittevernInfo.2": "Hvis du ikke har bekreftelse tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
+
     "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
     "steg.oppsummering.dokumenter.header": "Bekreftelse fra lege",
     "step.vedlegg.stepIndicatorLabel": "Last opp dokumenter",
@@ -272,5 +295,52 @@
     "psg-temp.icon.label.horizontal": "Bildet har ikke riktig retning",
     "psg-temp.icon.label.shadow": "Bildet har skygge på dokumentet",
     "psg-temp.lenkepanel.url": "https://www.nav.no/no/nav-og-samfunn/kontakt-nav/relatert-informasjon/ta-bilde-av-vedleggene-med-mobilen",
-    "psg-temp.lenkepanel.text": "Mer hjelp til å laste opp vedlegg (åpnes i et nytt vindu)."
+    "psg-temp.lenkepanel.text": "Mer hjelp til å laste opp vedlegg (åpnes i et nytt vindu).",
+
+    "info.smittevern.tittel": "Hva menes med særlige smittevernhensyn?",
+    "info.smittevern.info.html": "Når barnehagen eller skolen er åpen, men du må være hjemme med barnet ditt på grunn <strong>av særlige smittevernhensyn</strong>, kan du bruke omsorgsdager. Det er en lege som avgjør om det foreligger særlige smittevernhensyn. Det kan være smittevernhensyn til barnet eller andre familiemedlemmer som bor med barnet.",
+
+    "næringstype.FISKE": "Fiske",
+    "næringstype.JORDBRUK_SKOGBRUK": "Jordbruk",
+    "næringstype.DAGMAMMA": "Dagmamma i eget hjem",
+    "næringstype.ANNEN": "Annen virksomhet",
+
+    "fiskerinfo.LOTT": "Lott",
+    "fiskerinfo.HYRE": "Hyre",
+    "fiskerinfo.BLAD_A": "Blad A",
+    "fiskerinfo.BLAD_B": "Blad B",
+
+    "summary.virksomhet.næringstype": "Næringstype",
+    "summary.virksomhet.fiskerErPåBladB": "Fisker er på blad B",
+    "summary.virksomhet.registrertILand": "Registrert i",
+    "summary.virksomhet.orgnr": "Organisasjonsnummer",
+    "summary.virksomhet.inntekt": "Næringsinntekt",
+    "summary.virksomhet.opprettet": "Startet",
+    "summary.virksomhet.avsluttet": "Avsluttet",
+    "summary.virksomhet.pågående": "pågående",
+    "summary.virksomhet.varigEndring": "Har hatt en varig endring i arbeidsforholdet ditt, virksomheten eller arbeidssituasjonen din de siste fire årene",
+    "summary.virksomhet.varigEndring.dato": "Dato for endring",
+    "summary.virksomhet.varigEndring.endretInntekt": "Næringsinntekt etter endring",
+    "summary.virksomhet.varigEndring.forklaring": "Endring",
+    "summary.virksomhet.yrkesaktivSisteTreÅr": "Har begynt å jobbe i løpet av de tre siste ferdigliknede",
+    "summary.virksomhet.yrkesaktivSisteTreÅr.dato": "Ble yrkesaktiv",
+    "summary.virksomhet.harRegnskapsfører": "Har regnskapsfører",
+    "summary.virksomhet.harRevisor": "Har revisor",
+    "summary.virksomhet.regnskapsfører": "Regnskapsfører",
+    "summary.virksomhet.revisor": "Revisor",
+    "summary.virksomhet.revisorEllerRegnskapsførerDetaljer": "{navn}, telefon: {telefon}.",
+    "summary.virksomhet.revisor.kanInnhenteOpplysninger": "Kan innhente opplysninger",
+
+    "selvstendig.harDuHattInntekt.spm": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+    "selvstendig.list.tittel": "Registrerte virksomheter",
+    "selvstendig.list.leggTilLabel": "Legg til virksomhet",
+    "selvstendig.dialog.tittel": "Virksomhet",
+    "selvstendig.summary.harDuHattInntekt.header": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
+
+    "frilanser.harDuHattInntekt.spm": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.nårStartet.spm": "Når startet du som frilanser?",
+    "frilanser.jobberFortsatt.spm": "Jobber du fortsatt som frilanser?",
+    "frilanser.summary.harDuHattInntekt.header": "Har du jobbet og hatt inntekt som frilanser de siste 4 ukene?",
+    "frilanser.summary.nårStartet.header": "Når startet du som frilanser?",
+    "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?"
 }
