--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -361,27 +361,18 @@
     "fiskerinfo.BLAD_B": "Blad B",
 
     "summary.virksomhet.næringstype": "Næringstype",
-    "summary.virksomhet.fiskerErPåBladB": "Fisker er på blad B",
-    "summary.virksomhet.registrertILand": "Registrert i",
-    "summary.virksomhet.orgnr": "Organisasjonsnummer",
-    "summary.virksomhet.inntekt": "Næringsinntekt",
-    "summary.virksomhet.opprettet": "Startet",
-    "summary.virksomhet.avsluttet": "Avsluttet",
-    "summary.virksomhet.pågående": "pågående",
-    "summary.virksomhet.varigEndring": "Har hatt en varig endring i arbeidsforholdet ditt, virksomheten eller arbeidssituasjonen din de siste fire årene",
-    "summary.virksomhet.varigEndring.dato": "Dato for endring",
-    "summary.virksomhet.varigEndring.endretInntekt": "Næringsinntekt etter endring",
-    "summary.virksomhet.varigEndring.forklaring": "Endring",
-    "summary.virksomhet.yrkesaktivSisteTreÅr": "Har begynt å jobbe i løpet av de tre siste ferdigliknede",
-    "summary.virksomhet.yrkesaktivSisteTreÅr.dato": "Ble yrkesaktiv",
-    "summary.virksomhet.harRegnskapsfører": "Har regnskapsfører",
-    "summary.virksomhet.harRevisor": "Har revisor",
-    "summary.virksomhet.regnskapsfører": "Regnskapsfører",
-    "summary.virksomhet.revisor": "Revisor",
-    "summary.virksomhet.revisorEllerRegnskapsførerDetaljer": "{navn}, telefon: {telefon}.",
-    "summary.virksomhet.revisor.kanInnhenteOpplysninger": "Kan innhente opplysninger",
+    "summary.virksomhet.regnskapsfører": "Regnskapsfører er {navn}, telefon: {telefon}.",
+    "summary.virksomhet.revisor": "Revisor er {navn}, telefon: {telefon}.",
+    "summary.virksomhet.revisor.fullmakt": "Nav har fullmakt til å innhente opplysninger direkte fra revisor.",
+    "summary.virksomhet.ikkeRegnskapsførerEllerRevisor": "Har ikke regnskapsfører eller revisor.",
     "summary.virksomhet.tidsinfo.avsluttet": "Startet {fraOgMed}, avsluttet {tilOgMed}.",
-    "summary.virksomhet.tidsinfo.pågående": "Startet {fraOgMed} (pågående).",
+    "summary.virksomhet.fisker.påBladB": "Fisker er på Blad B.",
+    "summary.virksomhet.fisker.ikkePåBladB": "Fisker er ikke på Blad B.",
+    "summary.virksomhet.registrertILand": "Registrert i {land}",
+    "summary.virksomhet.registrertILand.orgnr": " (organisasjonsnummer {orgnr})",
+    "summary.virksomhet.næringsinntekt": "Næringsinntekt: {næringsinntekt}",
+    "summary.virksomhet.varigEndring": "Har hatt varig endring i arbeidsforholdet, virksomheten eller arbeidssituasjonen de siste fire årene. Dato for endring var {dato}, og næringsinntekt etter endringen er {inntekt}. Beskrivelse av endringen:",
+    "summary.virksomhet.yrkesaktivSisteTreFerdigliknedeÅrene": "Ble yrkesaktiv {dato}",
 
     "selvstendig.harDuHattInntekt.spm": "Har du hatt inntekt som selvstendig næringsdrivende siste 4 uker?",
     "selvstendig.list.tittel": "Registrerte virksomheter",
