--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -366,6 +366,7 @@
     "summary.virksomhet.revisor.fullmakt": "Nav har fullmakt til å innhente opplysninger direkte fra revisor.",
     "summary.virksomhet.ikkeRegnskapsførerEllerRevisor": "Har ikke regnskapsfører eller revisor.",
     "summary.virksomhet.tidsinfo.avsluttet": "Startet {fraOgMed}, avsluttet {tilOgMed}.",
+    "summary.virksomhet.tidsinfo.pågående": "Startet {fraOgMed} (pågående).",
     "summary.virksomhet.fisker.påBladB": "Fisker er på Blad B.",
     "summary.virksomhet.fisker.ikkePåBladB": "Fisker er ikke på Blad B.",
     "summary.virksomhet.registrertILand": "Registrert i {land}",
