endrer tekst på steg periode info boks

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -161,10 +161,11 @@
     "step.periode.har_søkt_andre_utbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV i forbindelse med koronasituasjonen?",
     "step.periode.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger fra NAV har du søkt om?",
     "step.periode.info.1": "Nå skal du legge inn dagene du har hatt fravær fra jobb fordi du har vært hjemme med omsorgsdager.",
-    "step.periode.info.2": "Reglene for hvor mange dager du selv må dekke, har endret seg flere ganger på grunn av koronasituasjonen:",
-    "step.periode.info.2.1": "Frem til og med 30. juni 2020 må du dekke de tre første omsorgsdagene selv",
-    "step.periode.info.2.2": "Fra 1. juli 2020 må du dekke de 10 første omsorgsdagene selv",
-    "step.periode.info.3": "Dagene du selv skal dekke gjelder totalt for hele 2020. Det betyr at hvis du allerede har dekket 3 dager, gjenstår det 7 dager for deg å dekke selv i år.",
+    "step.periode.info.2": "Reglene for hvor mange dager du selv må dekke har endret seg flere ganger på grunn av koronasituasjonen:",
+    "step.periode.info.2.1": "Frem til og med 12. mars 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.periode.info.2.2": "Fra 13. mars 2020 må du dekke de 3 første omsorgsdagene selv.",
+    "step.periode.info.2.3": "Fra 1. juli 2020 må du dekke de 10 første omsorgsdagene selv.",
+    "step.periode.info.3": "Dagene du selv skal dekke gjelder totalt for 2020. Det betyr at hvis du allerede har dekket for eksempel 3 dager, gjenstår det 7 dager for deg å dekke selv i år.",
     "step.periode.info.4": "I søknaden legger du inn alle dagene du har vært hjemme med omsorgsdager i den perioden du nå søker for, inkludert dagene du selv dekker.",
     "step.periode.spm.harPerioderMedFravær": "Har du hatt hele dager med fravær fra jobb?",
     "step.periode.harPerioderMedFravær.addLabel": "Legg til ny periode med fullt fravær",
