retter tittel tekst på vedlegg steg

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -335,7 +335,7 @@
 
     "steg.en.smittevern.sporsmal": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
     "steg.oppsummering.dokumenter.header": "Bekreftelse fra lege",
-    "step.vedlegg.stepTitle": "Ta bildet av forklaringen fra arbeidsgiveren din, og last opp.",
+    "step.vedlegg.stepTitle": "Last opp bekreftelse fra lege",
     "step.vedlegg.pageTitle": "Last opp dokumenter",
     "step.vedlegg.stepIndicatorLabel": "Last opp dokumenter",
     "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
