--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -328,7 +328,7 @@
 
     "steg.intro.form.spm.erSelvstendigEllerFrilanser": "Er du selvstendig næringsdrivende eller frilanser?",
     "steg.intro.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
-    "steg.intro.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehagen eller skolen er stengt på grunn av koronaviruset?",
+    "steg.intro.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært stengt på grunn av koronaviruset?",
     "steg.intro.form.spm.hjemmePgaSykdom": "Har du vært hjemme fra jobb fordi barnet eller barnepasser er blitt syk?",
     "steg.intro.søknadGjelderKunFor.1.html": "Denne søknaden gjelder <strong>kun for selvstendig næringsdrivende og frilansere</strong> som skal søke om utbetaling av omsorgspenger.",
     "steg.intro.søknadGjelderKunFor.2.html": "Hvis du er <strong>arbeidstaker</strong>, skal du ikke søke om utbetaling av omsorgspenger. Arbeidsgiveren din skal utbetale deg lønn som vanlig de dagene du tar ut omsorgsdager.",
